<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('repair_service_proposals', function (Blueprint $table) {
            $table->id();
            $table->foreignId('car_repair_id')->constrained('car_repairs')->onDelete('cascade');
            $table->foreignId('service_id')->constrained('services')->onDelete('cascade');
            $table->enum('status', ['proposed', 'approved', 'rejected', 'completed', 'complaint']);
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('repair_service_proposals');
    }
};
