@startuml Entity Relationship Diagram

entity User {
  * id : int <<PK>>
  --
  name : string
  email : string
  password : string
  role : enum('admin', 'car_owner', 'mechanic')
  created_at : datetime
  updated_at : datetime
}

entity Service {
  * id : int <<PK>>
  --
  name : string
  price : decimal
  created_at : datetime
  updated_at : datetime
}

entity CarRepair {
  * id : int <<PK>>
  --
  user_id : int <<FK>> // car owner
  car_model : string
  date_brought : datetime
  status : enum('pending', 'in_progress', 'waiting_for_review', 'completed')
  created_at : datetime
  updated_at : datetime
}

entity RepairServiceProposal {
  * id : int <<PK>>
  --
  car_repair_id : int <<FK>>
  service_id : int <<FK>>
  status : enum('proposed', 'approved', 'rejected', 'completed', 'complaint')
  created_at : datetime
  updated_at : datetime
}

entity JobAssignment {
  * id : int <<PK>>
  --
  user_id : int <<FK>> // mechanic
  repair_service_proposal_id : int <<FK>>
  status : enum('assigned', 'in_progress', 'done')
  created_at : datetime
  updated_at : datetime
}

entity Complaint {
  * id : int <<PK>>
  --
  car_repair_id : int <<FK>>
  description : text
  status : enum('open', 'in_progress', 'resolved')
  created_at : datetime
  updated_at : datetime
}

User ||--o{ CarRepair : owns
CarRepair ||--o{ RepairServiceProposal : proposes
RepairServiceProposal }o--|| Service : involves
RepairServiceProposal ||--o{ JobAssignment : assigned_to
User ||--o{ JobAssignment : handles
CarRepair ||--o{ Complaint : may_have

@enduml
